--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,2 +1,8 @@
-<app-login-hero></app-login-hero>
-<app-login-form></app-login-form>
+<div class="md:rounded-r-md rounded-b-md p-4 md:p-10 grid grid-cols md:grid-cols-2">
+    <div class="flex">
+        <app-login-hero></app-login-hero>
+    </div>
+    <div class="flex flex-col m-4 gap-2">
+        <app-login-form></app-login-form>
+    </div>
+</div>
