--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,2 +1,4 @@
-<app-router-breadcrumb></app-router-breadcrumb>
+<!-- <div class="hidden md:block -mt-11 w-full fixed rounded-b-md p-2 ease-in-out side-z bg-gray-950">
+    <dashboard-router-breadcrumb></dashboard-router-breadcrumb>
+</div> -->
 <router-outlet></router-outlet>
