--- a/src/app/dashboard/workspace-details/workspace-details.component.html
+++ b/src/app/dashboard/workspace-details/workspace-details.component.html
@@ -24,7 +24,7 @@
                     </div>
                     <button class="m-4 mb-8 text-sm bg-red-600 text-gray-200 py-1 px-3 mt-3 hover:bg-red-700 hero-button font-sans
                 rounded-md transition-all duration-300 transform hover:scale-105 focus:scale-105">
-                        <a [routerLink]="['/dashboard', formatUrl(item.key)]">
+                        <a [routerLink]="['/dashboard/workspace', formatUrl(item.key)]">
                             action
                         </a>
                     </button>
