--- a/src/app/footer/footer/footer.component.html
+++ b/src/app/footer/footer/footer.component.html
@@ -1,76 +1,87 @@
-<section class="bg-gray-100 mt-24 rounded-t-md  p-5 w-full">
+<section class="bg-gray-100 mt-24  rounded-t-md p-5 w-full">
     <div class="flex flex-wrap mx-2 w-full">
-        <div class="w-full md:w-1/3 lg:w-1/4 px-5 mb-4 space-y-1">
-            <div class="w-full text-lg font-bold xl:text-lg text-red-600 text-transform: uppercase">
-                get in touch
+        <div class="grid grid-cols md:grid-cols-2 lg:grid-cols-4">
+            <div class="p-2">
+                <div class="w-full text-lg font-bold xl:text-lg text-red-600 text-transform: uppercase">
+                    get in touch
+                </div>
+                <div class="font-sans text-sm mt-2">
+                    <p class="mt-1">Rue 34, Avenue Hassan II Medina Rabat. Morocco</p>
+                    <app-phone></app-phone>
+                    <app-email></app-email>
+                    <app-social></app-social>
+                </div>
             </div>
-            <div class="font-sans text-sm mt-2">
-                <p class="mt-1">Rue 34, Avenue Hassan II Medina Rabat. Morocco</p>
-                <app-phone></app-phone>
-                <app-email></app-email>
-                <app-social></app-social>
-            </div>
-        </div>
-        <div class="w-full md:w-1/3 lg:w-1/4 px-5 mb-4 space-y-1">
-            <div class="w-full text-lg font-bold xl:text-lg text-red-600 text-transform: uppercase">
-                Partners
-            </div>
-            <ul class="font-sans text-sm cursor-pointer">
-                <li class="mt-1 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
-                    <a [routerLink]="['/centers']">Gym Centers
-                    </a>
-                </li>
-                <li class="mt-1 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
-                   <a [routerLink]="['/trainers']"> Trainers
-                    </a>
-                </li>
-                <li class="mt-1 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
-                   <a [routerLink]="['/categories']"> Categories
-                    </a>
-                </li>
-                <li class="mt-1 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
-                    <a [routerLink]="['/exercises']">Exercises
+            <div class="p-2">
+                <div class="w-full text-lg font-bold xl:text-lg text-red-600 text-transform: uppercase">
+                    Partners
+                </div>
+                <ul class="font-sans text-sm cursor-pointer">
+                    <li
+                        class="mt-1 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
+                        <a [routerLink]="['/centers']">Gym Centers
                         </a>
-                </li>
-            </ul>
-        </div>
-        <div class="w-full  md:w-1/3 lg:w-1/4 px-5 mb-4 space-y-1">
-            <div class="w-full text-lg font-bold md:text-lg text-red-600 uppercase">
-                quick links
+                    </li>
+                    <li
+                        class="mt-1 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
+                        <a [routerLink]="['/trainers']"> Trainers
+                        </a>
+                    </li>
+                    <li
+                        class="mt-1 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
+                        <a [routerLink]="['/categories']"> Categories
+                        </a>
+                    </li>
+                    <li
+                        class="mt-1 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
+                        <a [routerLink]="['/exercises']">Exercises
+                        </a>
+                    </li>
+                </ul>
             </div>
-            <ul class="font-sans text-sm cursor-pointer mt-2">
-                <li class="mt-2 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
-                   <a [routerLink]="['/testimonials']">Testimonial
-                    </a>
-                </li>
-                <li class="mt-1 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
-                    <a [routerLink]="['/dashboard']"> Dashboard
+            <div class="p-2">
+                <div class="w-full text-lg font-bold md:text-lg text-red-600 uppercase">
+                    quick links
+                </div>
+                <ul class="font-sans text-sm cursor-pointer mt-2">
+                    <li
+                        class="mt-2 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
+                        <a [routerLink]="['/testimonials']">Testimonial
                         </a>
-                </li>
-                <li class="mt-1 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
-                    <a [routerLink]="['/my-tasks']"> Tasks
+                    </li>
+                    <li
+                        class="mt-1 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
+                        <a [routerLink]="['/dashboard']"> Dashboard
                         </a>
-                </li>
-                <li class="mt-1 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
-                   <a [routerLink]="['/my-todos']"> To-do list
-                    </a>
-                </li>
-                <!-- <li class="mt-1 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
+                    </li>
+                    <li
+                        class="mt-1 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
+                        <a [routerLink]="['/my-tasks']"> Tasks
+                        </a>
+                    </li>
+                    <li
+                        class="mt-1 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
+                        <a [routerLink]="['/my-todos']"> To-do list
+                        </a>
+                    </li>
+                    <!-- <li class="mt-1 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
                    <a [routerLink]="['/gallery']"> Gallery
                     </a>
                 </li> -->
-                <!-- <li class="mt-1 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
+                    <!-- <li class="mt-1 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
                    <a [routerLink]="['/community']"> Community
                     </a>
                 </li> -->
-                <li class="mt-1 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
-                   <a [routerLink]="['/report-problem']">Report a problem
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="w-full w-1/2 md:w-1/3 lg:w-1/4 px-5 mb-4 space-y-1">
-               <app-newsletter></app-newsletter>
+                    <li
+                        class="mt-1 hover:text-red-600 hover:drop-shadow-2xl transition-all duration-300 transform hover:scale-110 focus:scale-110">
+                        <a [routerLink]="['/report-problem']">Report a problem
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="p-2">
+                <app-newsletter></app-newsletter>
+            </div>
         </div>
     </div>
 </section>
