--- a/src/app/navbar/profile/profile.component.html
+++ b/src/app/navbar/profile/profile.component.html
@@ -1,16 +1,16 @@
-<div class="flex items-center p-2 relative text-gray-700" *ngIf="userData">
-    <div class="flex items-center gap-2">
-        <div class="hidden md:block flex flex-col text-md" *ngIf="search === true">
-            <h3 class="capitalize text-gray-700 text-md">
+<div class="flex items-center justify-center text-gray-700" *ngIf="userData">
+    <div class="flex items-center justify-center gap-1">
+        <div class="hidden md:block flex flex-col text-sm" *ngIf="search === true">
+            <h3 class="flex items-center justify-center capitalize text-gray-700 text-sm">
                 {{ userData.firstname }} {{ userData.lastname }}
             </h3>
-            <h4 class="flex justify-center text-gray-400 capitalize text-sm"> {{ userData.role }}</h4>
+            <h4 class="flex items-center justify-center text-gray-400 capitalize text-sm"> {{ userData.role }}</h4>
         </div>
         <div class="flex flex-col text-md" *ngIf="search === false">
             <h3 class="capitalize text-gray-700 text-md">
                 {{ userData.firstname }} {{ userData.lastname }}
             </h3>
-            <h4 class="flex justify-center text-gray-400 capitalize text-sm"> {{ userData.role }}</h4>
+            <h4 class="flex items-center justify-center text-gray-400 capitalize text-sm"> {{ userData.role }}</h4>
         </div>
         <img [src]="'data:image;base64, ' + userData.profilePhoto" width="30px"
             class="cursor-pointer object-cover rounded-full" (click)="toggleProfile()" (click)="stopPropagation($event)"
@@ -22,7 +22,7 @@
     </div>
 
     <div [ngClass]="{'hidden': !profileOpen}" id="profileDropdown"
-        class="absolute top-[120%] right-6 bg-white rounded-md w-64 text-sm border border-gray-300 shadow-lg">
+        class="absolute top-[100%] bg-white rounded-md w-64 text-sm border border-gray-300 shadow-lg">
         <div class="flex justify-center p-2">
             <div class="shrink-0">
                 <img [src]="'data:image;base64, ' + userData.profilePhoto" width="50px"
