--- a/src/app/navbar/top-bar/top-bar.component.html
+++ b/src/app/navbar/top-bar/top-bar.component.html
@@ -1,12 +1,13 @@
 <!-- Top Navigation Bar -->
 <div class="bg-white flex justify-between fixed w-full p-1 nav-z rounded-b-md text-gray-950 shadow-lg">
     <!-- Branding and Sidebar Toggle Button -->
-    <div class="ml-2 flex items-center cursor-pointer z-2">
+    <div class="flex items-center cursor-pointer z-2">
         <div class="flex items-center p-2 cursor-pointer">
-            <img src="../../../assets/landing/berliz.png" style="width: 170px;" class="hidden md:block">
+            <img src="../../../assets/landing/logo.png" style="width: 30px;" class="block md:hidden">
+            <img src="../../../assets/landing/berliz.png" style="width: 120px;" class="hidden md:block">
             <div class="hover:drop-shadow-2xl transition-all duration-1000 ease-in-out transform hover:scale-105 
-                    border-2 border-gray-200 rounded-md p-1 mr-2">
-                <i-feather name="align-justify" class="min-w-[30px] gray-950 font-bold drop-shadow-xl"
+                    rounded-md p-1 mr-2">
+                <i-feather name="bell" class="mt-2 w-24 md:w-36 text-gray-700 font-bold drop-shadow-xl"
                     (click)="toggleSidebar()" (click)="stopPropagation($event)"></i-feather>
             </div>
         </div>
@@ -25,13 +26,16 @@
         (subscriptionsResults)="handleSubscriptionSearchResults($event)"
         (subTasksResults)="handlesubTaskSearchResults($event)" (tasksResults)="handleTaskSearchResults($event)"
         (testimonialsResults)="handleTestimonialSearchResults($event)" [searchComponent]="searchComponent"></app-search>
-    <div class="flex justify-end mr-2 gap-2 md:gap-6 border-2 rounded-full border-gray-300">
+    <div class="flex justify-end mr-2 gap-1 md:gap-4 border-2 rounded-full border-gray-300">
         <div class="flex items-center p-2 cursor-pointer hover:drop-shadow-2xl transition-all 
                 duration-300 ease-in-out transform hover:scale-105 cursor-pointer">
-            <div class="bg-gray-200 rounded-full p-1" [routerLink]="['/home']">
-                <feather-icon name="home" class="text-ld font-bold text-gray-600"></feather-icon>
+            <div class="h-6 bg-gray-200 rounded-full" [routerLink]="['/home']">
+                <feather-icon name="home" class=" p-1 font-bold text-gray-800" 
+                style="width: 22px;"></feather-icon>
             </div>
         </div>
+        <div class="flex items-center justify-center">
         <app-profile [search]="isSearch"></app-profile>
+    </div>
     </div>
 </div>
