--- a/src/app/router-breadcrumb/router-breadcrumb.component.html
+++ b/src/app/router-breadcrumb/router-breadcrumb.component.html
@@ -1,8 +1,10 @@
-<div class="flex flex-cols font-bold text-sm text-gray-950">
-  <p *ngFor="let breadcrumb of breadcrumbs; let last = last">
-    <a *ngIf="!last" [routerLink]="['/' + breadcrumb]">
-      {{ breadcrumb }}
-    </a>
-    <span *ngIf="last"> {{ breadcrumb}}</span>
-  </p>
-</div>>
+<div class="flex flex-cols font-bold text-sm text-gray-950 italic">
+  <ng-container *ngFor="let breadcrumb of breadcrumbs; let last = last">
+    <ng-container *ngIf="!last">
+      <a [routerLink]="breadcrumb.url">{{ breadcrumb.label +'/' }}</a>
+    </ng-container>
+    <ng-container *ngIf="last">
+      {{ breadcrumb.label }}
+    </ng-container>
+  </ng-container>
+</div>
